kubernetes-networks/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    name: web
spec:
  containers:
  - name: web
    image: kazantsev27/kubernetes-intro:latest
    livenessProbe:
      tcpSocket: { port: 8000 }
    readinessProbe:
      httpGet:
        path: /index.html
        port: 80
    volumeMounts:
    - name: index
      mountPath: /app
  volumes:
  - name: index
    emptyDir: {}
